[package]
name = "crdt-bench-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
criterion = "0.5"
loro-internal = { git = "https://github.com/loro-dev/loro.git", branch = "main", package = "loro-internal" }
arbitrary = { version = "1.2.0", features = ["derive"] }
enum-as-inner = "0.6"
flate2 = "1.0.25"
serde_json = "1.0.89"
yrs = "0.17"
automerge = "0.5"
diamond-types = "1.0.0"
arref = "0.1.0"
indicatif = "0.17.3"
y-octo = { path = "../y-octo/y-octo", features = ["large_refs", "bench"] }

[profile.release]
debug = true

[[bench]]
name = "automerge"
harness = false

[[bench]]
name = "loro"
harness = false

[[bench]]
name = "y-octo"
harness = false

[[bench]]
name = "yrs"
harness = false

[[bench]]
name = "diamond-type"
harness = false
